updated l&d styles to be consistent w rsvpd

--- a/atlantis.html
+++ b/atlantis.html
@@ -33,8 +33,9 @@
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	<div class="title-wrapper">
   	<div class="page-title">Atlantis Hub</div>
+  	<div class="last"> <div class="short-divider"></div></div>
   	<div class="project-info">
-  		Fall 2017 | Interaction Design Overview | <a href="https://www.youtube.com/watch?v=gH_H0uQTa00&feature=youtu.be" target="_blank">Video</a>
+  		Fall 2017 • Interaction Design Overview • <a href="https://www.youtube.com/watch?v=gH_H0uQTa00&feature=youtu.be" target="_blank">Video</a>
   	</div>
   	</div>
   	<img src="pics/atlantis/atlantis.jpg" style="width: 80%; padding:10%; background-color: #FEE469">
