--- a/chutzpow.html
+++ b/chutzpow.html
@@ -32,8 +32,9 @@
     <div id="nav"></div>
   	<div class="title-wrapper">
   	<div class="page-title">Chutz-Pow!</div>
+  	<div class="last"> <div class="short-divider"></div></div>
   	<div class="project-info">
-  		Spring 2018 | Information Systems Consulting Project | <a href="http://www.chutz-pow.org" target="_blank" ">Website</a>
+  		Spring 2018 • Information Systems Consulting Project • <a href="http://www.chutz-pow.org" target="_blank" ">Website</a>
   	</div>
   	</div>
   	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
