--- a/miles.html
+++ b/miles.html
@@ -33,8 +33,9 @@
 
 		<div class="title-wrapper">
 	  	<div class="page-title">MILES</div> 
+	  	<div class="last"> <div class="short-divider"></div></div>
 	  	<div class="project-info">
-	  		Fall 2017 | Interaction Design Overview | <a href="https://www.youtube.com/watch?v=uT68SYJpt50">Video</a>
+	  		Fall 2017 • Interaction Design Overview • <a href="https://www.youtube.com/watch?v=uT68SYJpt50">Video</a>
 	  	</div>
 	  	</div>
 	  	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
