--- a/rsvpd.html
+++ b/rsvpd.html
@@ -35,7 +35,7 @@
 	
 	  	<div class="title-wrapper">
 		  	<div class="page-title">RSVP'd</div>
-		  	<div class="last"> <div class="short-divider" style="margin-bottom: 2%"></div></div>
+		  	<div class="last"> <div class="short-divider"></div></div>
 		  	<div class="project-info">Fall 2018 • Information Systems Capstone Project • <a href="https://sketch.cloud/s/GJGWD">Wires</a>
 	  	</div>
 	  	</div>
