--- a/upark.html
+++ b/upark.html
@@ -33,7 +33,8 @@
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 		<div class="title-wrapper">
 	  	<div class="page-title">UPark</div>
-	  	<div class="project-info">Fall 2017 | Interaction Design Overview | <a href="https://xd.adobe.com/view/e6f7478c-22bb-4439-af47-3c3a3976e3d0/screen/0e7bd19b-2882-4232-8812-af53c774a6e8/Reservations-Upcoming/">Prototype</a></div>
+	  	<div class="last"> <div class="short-divider"></div></div>
+	  	<div class="project-info">Fall 2017 • Interaction Design Overview • <a href="https://xd.adobe.com/view/e6f7478c-22bb-4439-af47-3c3a3976e3d0/screen/0e7bd19b-2882-4232-8812-af53c774a6e8/Reservations-Upcoming/">Prototype</a></div>
 	  	</div>
 	  	
 	  	<img src="pics/upark/bigpic.jpg" class="big-pic">
