--- a/justharvest.html
+++ b/justharvest.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Emily Porat | Just Harvest Community Table</title>
+    <title>Emily Porat | Community Table</title>
     <link rel="stylesheet" type="text/css" href="styles/global2.css">
     <link rel="stylesheet" type="text/css" href="styles/justharvest.css">
     <link rel="stylesheet" type="text/css" href="styles/nav.css">
@@ -34,8 +34,9 @@
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	
 	  	<div class="title-wrapper">
-	  	<div class="page-title">Just Harvest Community Table</div>
-	  	<div class="project-info">Spring 2019 | Service Design </div>
+	  	<div class="page-title">Community Table</div>
+	  	<div class="last"> <div class="short-divider"></div></div>
+	  	<div class="project-info">Spring 2019 • Service Design </div>
 	  	</div>
 	  	<img src="pics/justharvest/cover.jpg" class="big-pic">
 
