--- a/newstagram.html
+++ b/newstagram.html
@@ -34,8 +34,9 @@
 		
 		<div class="title-wrapper">
 	  	<div class="page-title">Newstagram</div>
+	  	<div class="last"> <div class="short-divider"></div></div>
 	  	<div class="project-info">
-	  		Spring 2018 | Social Web | <a href="https://adobe.ly/2FygOXL" target="_blank">View the Prototype</a>
+	  		Spring 2018 • Social Web • <a href="https://adobe.ly/2FygOXL" target="_blank">View the Prototype</a>
 	  	</div>
 	  	</div>
 	  	<img src="pics/newstagram/streamspurple.jpg" class="big-pic">
