updated home look/feel, added some js animation, added sf page

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     </script>
   </head>
 
-  <body>
+  <body class="preload">
     <meta name="viewport" content="width=device-width">
       <div id="nav"></div>
       <img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
