--- a/chutzpow.html
+++ b/chutzpow.html
@@ -27,10 +27,10 @@
     </script>
   </head>
 
-  <body>
+  <body class="preload">
     <meta name="viewport" content="width=device-width">
     <div id="nav"></div>
-  	<div class="title-wrapper">
+  	<div class="title-wrapper animate-reveal animate-first">
   	<div class="page-title">Chutz-Pow!</div>
   	<div class="last"> <div class="short-divider"></div></div>
   	<div class="project-info">
@@ -38,7 +38,7 @@
   	</div>
   	</div>
   	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
-  	<img src="pics/chutzpow/titlegreen.png" class="big-pic">
+  	<img src="pics/chutzpow/titlegreen.png" class="big-pic animate-reveal animate-second">
 
   	<div id="chutzpow" class="margin-medium">
 
@@ -165,12 +165,12 @@
 				</div>
 			</div>
 
-		  	<a href="newstagram.html" class="next-project" style="background-color: #18A398; float: right"> 
-		  		NEWSTAGRAM >
+		  	<a href="zensors.html" class="next-project" style="background-color: #18A398; float: right"> 
+		  		ZENSORS >
 		  	</a>
 
-		  	<a href="zensors.html" class="next-project" onclick="openPage('newstagram.html')" style="background-color: #18A398; float: left"> 
-		  		< ZENSORS
+		  	<a href="l&d.html" class="next-project" onclick="openPage('newstagram.html')" style="background-color: #18A398; float: left"> 
+		  		< L&D PORTAL
 		  	</a>
 	  	</div>
 
