--- a/justharvest.html
+++ b/justharvest.html
@@ -28,17 +28,17 @@
   </head>
 
   </html>
-  <body>
+  <body class="preload">
     <meta name="viewport" content="width=device-width">
     <div id="nav"></div>
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	
-	  	<div class="title-wrapper">
+	  	<div class="title-wrapper animate-reveal animate-first">
 	  	<div class="page-title">Community Table</div>
 	  	<div class="last"> <div class="short-divider"></div></div>
 	  	<div class="project-info">Spring 2019 • Service Design </div>
 	  	</div>
-	  	<img src="pics/justharvest/cover.jpg" class="big-pic">
+	  	<img src="pics/justharvest/cover.jpg" class="big-pic animate-reveal animate-first">
 
 	  	<div id="justharvest" class="margin-medium">
 
