--- a/l&d.html
+++ b/l&d.html
@@ -28,19 +28,19 @@
   </head>
 
   </html>
-  <body>
+  <body class="preload">
     <meta name="viewport" content="width=device-width">
     <div id="nav"></div>
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	
-	  	<div class="title-wrapper">
+	  	<div class="title-wrapper animate-reveal animate-first">
 		  	<div class="page-title">Learning & Development Portal</div>
 		  	<div class="last"> <div class="short-divider"></div></div>
 		  	<div class="project-info">
 		  		Summer 2018 • Deloitte Digital Summer Internship 
 		  	</div>
 	  	</div>
-	  	<img src="pics/l&d/requests.jpg" class="big-pic">
+	  	<img src="pics/l&d/requests.jpg" class="big-pic animate-reveal animate-second">
 	  	<div id="ld" class="margin-medium">
 
 	  	<div class="content">
@@ -284,12 +284,12 @@
 		</div>
 		</div>
 
-		  	<a href="zensors.html" class="next-project" style="background-color: #49ce5c; float: right"> 
-		  		ZENSORS >
+		  	<a href="rsvpd.html" class="next-project" style="background-color: #49ce5c; float: right"> 
+		  		RSVP'D >
 		  	</a>
 
-		  	<a href="rsvpd.html" class="next-project" style="background-color: #49ce5c; float: left"> 
-		  		< RSVPD
+		  	<a href="salesforce.html" class="next-project" style="background-color: #49ce5c; float: left"> 
+		  		< SALESFORCE
 		  	</a>
 	  	</div>
   	</div>
