--- a/miles.html
+++ b/miles.html
@@ -26,12 +26,12 @@
     </script>
   </head>
 
-  <body>
+  <body class="preload">
     <meta name="viewport" content="width=device-width">
     	<div id="nav"></div>
 		<div id="miles" class="margin-medium">
 
-		<div class="title-wrapper">
+		<div class="title-wrapper animate-reveal animate-first">
 	  	<div class="page-title">MILES</div> 
 	  	<div class="last"> <div class="short-divider"></div></div>
 	  	<div class="project-info">
@@ -40,7 +40,7 @@
 	  	</div>
 	  	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 
-	  	<iframe class="product-video" src="https://www.youtube.com/embed/uT68SYJpt50?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+	  	<iframe class="product-video animate-reveal animate-second" src="https://www.youtube.com/embed/uT68SYJpt50?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 	  	
 	  	<div class="content">
 			<div class="context-summary">
