--- a/newstagram.html
+++ b/newstagram.html
@@ -27,19 +27,19 @@
     </script>
   </head>
 
-  <body>
+  <body class="preload">
     <meta name="viewport" content="width=device-width">
     <div id="nav"></div>
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 		
-		<div class="title-wrapper">
+		<div class="title-wrapper animate-reveal animate-first">
 	  	<div class="page-title">Newstagram</div>
 	  	<div class="last"> <div class="short-divider"></div></div>
 	  	<div class="project-info">
 	  		Spring 2018 • Social Web • <a href="https://adobe.ly/2FygOXL" target="_blank">View the Prototype</a>
 	  	</div>
 	  	</div>
-	  	<img src="pics/newstagram/streamspurple.jpg" class="big-pic">
+	  	<img src="pics/newstagram/streamspurple.jpg" class="big-pic animate-reveal animate-second">
 
 	  	<div id="newstagram" class="margin-medium">
 
@@ -137,8 +137,8 @@
 		  		UPARK >
 		  	</a>
 
-		  	<a href="chutzpow.html" class="next-project" style="background-color: #662C92; float: left"> 
-		  		< CHUTZ-POW!
+		  	<a href="zensors.html" class="next-project" style="background-color: #662C92; float: left"> 
+		  		< ZENSORS
 		  	</a>
 
 	  	</div>
