--- a/rsvpd.html
+++ b/rsvpd.html
@@ -28,18 +28,18 @@
   </head>
 
   </html>
-  <body>
+  <body class="preload">
     <meta name="viewport" content="width=device-width">
     <div id="nav"></div>
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	
-	  	<div class="title-wrapper">
+	  	<div class="title-wrapper animate-reveal animate-first">
 		  	<div class="page-title">RSVP'd</div>
 		  	<div class="last"> <div class="short-divider"></div></div>
 		  	<div class="project-info">Fall 2018 • Information Systems Capstone Project • <a href="https://sketch.cloud/s/GJGWD">Wires</a>
 	  	</div>
 	  	</div>
-	  	<img src="pics/rsvpd/cover2.png" class="big-pic" style="background-color: #ff943a">
+	  	<img src="pics/rsvpd/cover2.png" class="big-pic animate-reveal animate-second" style="background-color: #ff943a">
 	  	<div id="ld" class="margin-medium">
 
 	  	<div class="content">
@@ -261,12 +261,12 @@
 
 
 	  	</div>
-		  	<a href="l&d.html" class="next-project" style="background-color: #ff943a; float: right"> 
-		  		L&D PORTAL >
+		  	<a href="chutzpow.html" class="next-project" style="background-color: #ff943a; float: right"> 
+		  		CHUTZ-POW >
 		  	</a>
 
-		  	<a href="justharvest.html" class="next-project" style="background-color: #ff943a; float: left"> 
-		  		< COMMUNITY TABLE
+		  	<a href="l&d.html" class="next-project" style="background-color: #ff943a; float: left"> 
+		  		< L&D PORTAL
 		  	</a>
 	  	</div>
   	</div>
