--- a/zensors.html
+++ b/zensors.html
@@ -27,17 +27,17 @@
     </script>
   </head> 
 
-  <body>
+  <body class="preload">
     <meta name="viewport" content="width=device-width">
     <div id="nav"></div>
 
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
-  	<div class="title-wrapper">
+  	<div class="title-wrapper animate-reveal animate-first">
     <div class="page-title">Zensors</div>
     <div class="last"> <div class="short-divider"></div></div>
   	<div class="project-info">Spring 2018 • HCI Undergraduate Research • <a href="https://www.zensors.com/">Website</a></div>
     </div>
-    <img src="pics/zensors/zensorsgray.jpg" class="big-pic">
+    <img src="pics/zensors/zensorsgray.jpg" class="big-pic animate-reveal animate-second">
   	<div id="zensors" class="margin-medium">
 	  	<div class="content">
 			<div class="context-summary">
@@ -228,12 +228,12 @@
 
 		</div>
 
-			<a href="chutzpow.html" class="next-project" style="background-color: #33312E; float: right"> 
-		  		CHUTZ-POW >
+			<a href="newstagram.html" class="next-project" style="background-color: #33312E; float: right"> 
+		  		NEWSTAGRAM >
 		  	</a>
 
-		  	<a href="l&d.html" class="next-project" style="background-color: #33312E; float: left"> 
-		  		< L&D PORTAL
+		  	<a href="chutzpow.html" class="next-project" style="background-color: #33312E; float: left"> 
+		  		< CHUTZ-POW
 		  	</a>
 	  	</div>
 	</div>
