updated metadata description for index and about

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
   <head>
     <title>Emily Porat | About</title>
-    <meta name="description" content="Emily Porat's Portfolio | UX/UI | Development | Technology Consulting | Emily Porat is a rising senior at Carnegie Mellon University studying Information Systems and Human-Computer Interaction">
+    <meta name="description" content="Emily Porat's Portfolio | UX/UI | Development | Technology Consulting | Emily Porat is a UX Designer at Deloitte Digital">
     <meta name="keywords" content="Emily Porat, Carnegie Mellon University, Emily Porat CMU, Emily Porat Carnegie Mellon, Emily Porat Carnegie Mellon University, Porat, Emily CMU, Porat CMU">
     <meta name="author" content="Emily Porat">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
