updated home, archive, about

--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
     <meta name="author" content="Emily Porat">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="styles/nav.css">
-    <link rel="stylesheet" type="text/css" href="styles/global2.css">
+    <link rel="stylesheet" type="text/css" href="styles/global.css">
+    <link rel="stylesheet" type="text/css" href="styles/global-mobile.css">
     <link rel="stylesheet" type="text/css" href="styles/about.css">
-    <link rel="stylesheet" type="text/css" href="styles/contact.css">
     <link rel="shortcut icon" type="image/x-icon" href="pics/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -35,12 +35,13 @@
       <div id="nav"></div>
       <img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 
-      <div id="about">
-          <div id="about-title">ABOUT EMILY</div>
+      <div id="about" class="margin-medium">
+          
+          <div class="header">About Emily</div>
           <img src="pics/about/emily4.jpg" id="about-pic">
           
-          <div id="about-description">
-            Hi there! If you want to know a little bit more about me, you’ve come to the right place. I'm originally from Mountain View, California, went to Carnegie Mellon for undergrad, and I'm currently in Washington DC. Yes, I miss the perfect weather and cheap tacos - but the East Coast isn't half bad.
+          <div id="about-description" class="body">
+            Hi there! If you want to know a little bit more about me, you’ve come to the right place. I'm originally from Mountain View, California, graduated from Carnegie Mellon University in 2019, and I'm currently living in Washington DC and working at Deloitte Digital. Yes, I miss the perfect weather and cheap tacos - but the East Coast isn't half bad.
             <p>
             My first exposure to anything remotely related to UI/UX was during my senior year in high school at <a href="http://www.freestyleacademy.rocks/">Freestyle Academy</a>, where I took Web Production and Graphic Design. I learned that I liked making pretty websites, and found a creative outlet that wasn't writing (my other passion in high school).
             </p>
