--- a/rsvpd.html
+++ b/rsvpd.html
@@ -3,7 +3,8 @@
 
   <head>
     <title>Emily Porat | RSVPd</title>
-    <link rel="stylesheet" type="text/css" href="styles/global2.css">
+    <link rel="stylesheet" type="text/css" href="styles/global.css">
+    <link rel="stylesheet" type="text/css" href="styles/global-mobile.css">
     <link rel="stylesheet" type="text/css" href="styles/nav.css">
     <link rel="stylesheet" type="text/css" href="styles/rsvpd.css">
     <link rel="stylesheet" type="text/css" href="styles/contact.css">
@@ -34,9 +35,9 @@
 	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 	
 	  	<div class="title-wrapper animate-reveal animate-first">
-		  	<div class="page-title">RSVP'd</div>
+		  	<div class="header">RSVP'd</div>
 		  	<div class="last"> <div class="short-divider"></div></div>
-		  	<div class="project-info">Fall 2018 • Information Systems Capstone Project • <a href="https://sketch.cloud/s/GJGWD">Wires</a>
+		  	<div class="subheader-2" style="text-align: center">Fall 2018 • Information Systems Capstone Project • <a href="https://sketch.cloud/s/GJGWD">Wires</a>
 	  	</div>
 	  	</div>
 	  	<img src="pics/rsvpd/cover2.png" class="big-pic animate-reveal animate-second" style="background-color: #ff943a">
@@ -44,7 +45,7 @@
 
 	  	<div class="content">
 			<div class="context-summary">
-			<div class="context-title">Context</div>
+			<div class="subheader-2">Context</div>
 				<p>
 				I worked on this project through my senior Information Systems capstone class. This class focused on solving real-world problems with innovative technology solutions. Throughout the semester, practitioners from Deloitte Consulting mentored the teams and provided feedback. At the end of the semester, each team presented their project to a panel of IS faculty and Deloitte mentors; of the 15+ teams, our team was awarded overall Best User Experience Design.
 				</p>
@@ -100,7 +101,7 @@
 		  		<div class="subtitle-left">problem</div>
 		  		<div class="text-right">
 		  			<b class="subtitle-right">flake • /flāk/</b>
-		  			<div class="context-subtitle" style="font-size: 10px">INFORMAL • NORTH AMERICAN</div>
+		  			<div class="subheader-2" style="font-size: 10px">INFORMAL • NORTH AMERICAN</div>
 		  			<i>fail to keep an appointment or fulfill a commitment, especially with little or no advance notice.</i>
 		  			<i style="color: gray; display: block">"a real friend won't ever flake on you"</i>
 		  			<div class="last"><div class="divider" style="background-color: #ff943a"></div></div>
